# SensorProcessor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_protos.sh
containers/: build-dev-image.sh  dockerfile-dev  dockerfile-dev-base
docs/: developer-guide.md
include/: AppConfig.h  ClientBroker.h  CoreApplication.h  EventBus.h  EventDispatcher.h  Eventing.h  IService.h  SessionService.h  SineWaveSensor.h
protos/DiagnosticsService/: ServerInfo.proto
resources/config/: AppConfig.json
src/: AppConfig.cpp  ClientBroker.cpp  CoreApplication.cpp  EventBus.cpp  EventDispatcher.cpp  IService.cpp  SessionService.cpp  SineWaveSensor.cpp  main.cpp
testing/testclient/: CMakeLists.txt  README.md
testing/testclient/include/: SimpleBroker.h  cli.h
testing/testclient/src/: SimpleBroker.cpp  cli.cpp  main.cpp
